[gd_scene load_steps=3 format=3 uid="uid://dqm5ij71lj0bi"]

[ext_resource type="Script" uid="uid://desdj2gldiy12" path="res://Scripts/card_display.gd" id="1_bcrn8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_048ni"]
bg_color = Color(0.581033, 0.581033, 0.581033, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.133333, 0.4, 0.666667, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="CardDisplay" type="Node2D"]
script = ExtResource("1_bcrn8")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(100, 140)
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_048ni")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="PowerDisplayContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="GridContainer" type="GridContainer" parent="Panel/MarginContainer/PowerDisplayContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
columns = 3

[node name="Label" type="Label" parent="Panel/MarginContainer/PowerDisplayContainer/GridContainer"]
custom_minimum_size = Vector2(14, 14)
layout_mode = 2

[node name="NorthPower" type="Label" parent="Panel/MarginContainer/PowerDisplayContainer/GridContainer"]
custom_minimum_size = Vector2(18, 18)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "5"

[node name="Label2" type="Label" parent="Panel/MarginContainer/PowerDisplayContainer/GridContainer"]
custom_minimum_size = Vector2(14, 14)
layout_mode = 2

[node name="WestPower" type="Label" parent="Panel/MarginContainer/PowerDisplayContainer/GridContainer"]
custom_minimum_size = Vector2(18, 18)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "5"

[node name="Label3" type="Label" parent="Panel/MarginContainer/PowerDisplayContainer/GridContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2

[node name="EastPower" type="Label" parent="Panel/MarginContainer/PowerDisplayContainer/GridContainer"]
custom_minimum_size = Vector2(18, 18)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "5"

[node name="Label4" type="Label" parent="Panel/MarginContainer/PowerDisplayContainer/GridContainer"]
custom_minimum_size = Vector2(14, 14)
layout_mode = 2

[node name="SouthPower" type="Label" parent="Panel/MarginContainer/PowerDisplayContainer/GridContainer"]
custom_minimum_size = Vector2(18, 18)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "5"

[node name="Label5" type="Label" parent="Panel/MarginContainer/PowerDisplayContainer/GridContainer"]
custom_minimum_size = Vector2(14, 14)
layout_mode = 2
